--- a/gitlab/map.jinja
+++ b/gitlab/map.jinja
@@ -1,14 +1,32 @@
-# vim: sts=2 ts=2 sw=2 et ai
-{% import_yaml "gitlab/defaults.yaml" or {} as defaults %}
-{% import_yaml "gitlab/osfamilymap.yaml" or {} as osfamilymap %}
+# -*- coding: utf-8 -*-
+# vim: ft=jinja
 
+{%- set tplroot = tpldir.split('/')[0] %}
 
-{%- set merged_defaults = salt['grains.filter_by'](defaults,
-    default='gitlab',
-    merge=salt['grains.filter_by'](osfamilymap, grain='os_family',
-      merge=salt['pillar.get']('gitlab:lookup', default={})
+{%- import_yaml tplroot ~ "/defaults.yaml" or {} as default_settings %}
+{%- import_yaml tplroot ~ "/osfamilymap.yaml" or {} as osfamilymap %}
+
+{%- set _config = salt['config.get'](tplroot, default={}) %}
+
+{%- set defaults = salt['grains.filter_by'](
+      default_settings,
+      default=tplroot,
+      merge=salt['grains.filter_by'](
+        osfamilymap,
+        grain='os_family',
+        merge=salt['grains.filter_by'](
+          _config,
+          default='lookup'
+       )
+     )
+   ) 
+%}
+
+{%- set config = salt['grains.filter_by'](
+      {'defaults': defaults},
+      default='defaults',
+      merge=_config
     )
-) %}
+%}
 
-{#- Merge the gitlab pillar #}
-{%- set gitlab = salt['pillar.get']('gitlab', default=merged_defaults, merge=True) %}
+{%- set gitlab = config %}
