--- a/gitlab/scripts/install-service.sh.j2
+++ b/gitlab/scripts/install-service.sh.j2
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-gitlab-runner install -user {{ service.username }} --service {{ service_name }} --working-directory {{ working_directory }} --config /etc/gitlab-runner/{{service_name}}.toml
+gitlab-runner install -user {{ service.username }} --service {{ service.name }} --working-directory {{ working_directory }} --config /etc/gitlab-runner/{{service.name}}.toml
